W-14094120: Run MTF tests with Java 17 and Mule Runtime 4.6.0-SNAPSHOT (#718)