@@ -21,6 +21,8 @@
     <description>A Mule extension that provides HTTP server and client functionality</description>
 
     <properties>
+        <jacoco.version>0.8.10</jacoco.version>
+
         <fluentHcVersion>4.5.13</fluentHcVersion>
         <grizzlyVersion>2.3.36-MULE-024</grizzlyVersion>
         <grizzlyAhcVersion>1.14-MULE-019</grizzlyAhcVersion>
@@ -44,9 +46,9 @@
         <!-- Remove when a new parent version with MTF is available -->
         <munit.input.directory>src/test/munit</munit.input.directory>
         <munit.output.directory>${basedir}/target/test-mule/munit</munit.output.directory>
-        <munit.extensions.maven.plugin.version>1.1.2</munit.extensions.maven.plugin.version>
-        <munit.version>2.3.18</munit.version>
-        <mtf-tools.version>1.1.2</mtf-tools.version>
+        <munit.extensions.maven.plugin.version>1.2.0-SNAPSHOT</munit.extensions.maven.plugin.version>
+        <munit.version>3.0.0-SNAPSHOT</munit.version>
+        <mtf-tools.version>1.2.0-SNAPSHOT</mtf-tools.version>
         <mavenResources.version>3.0.2</mavenResources.version>
 
         <scriptingModuleVersion>1.1.7</scriptingModuleVersion>
@@ -146,9 +148,16 @@
                 <configuration>
                     <argLines>
                         <argLine>
+                            -XX:+IgnoreUnrecognizedVMOptions
+                        </argLine>
+                        <argLine>
+                            --add-opens=java.base/java.lang=ALL-UNNAMED
+                        </argLine>
+                        <argLine>
                             -javaagent:${settings.localRepository}/org/jacoco/org.jacoco.agent/${jacoco.version}/org.jacoco.agent-${jacoco.version}-runtime.jar=destfile=${session.executionRootDirectory}/target/jacoco.exec
                         </argLine>
                     </argLines>
+
                     <!-- For testing tracing capabilities-->
                     <systemPropertyVariables>
                         <!-- We keep the two OTEL properties for 4.5.0 and 4.6.0 -->
@@ -162,16 +171,13 @@
                         <additionalRuntimes>
                             <!-- Compatibility with the minMuleVersion -->
                             <additionalRuntime>MULE_EE:4.1.1</additionalRuntime>
-
-                            <additionalRuntime>MULE_EE:4.4.1-SNAPSHOT</additionalRuntime>
-                            <!-- TODO (W-13593765): Uncomment this version -->
-                            <!-- <additionalRuntime>MULE_EE:4.5.0-SNAPSHOT</additionalRuntime>-->
                         </additionalRuntimes>
 
                         <!-- Versions with support and snapshots -->
                         <discoverRuntimes>
                             <product>EE</product>
-                            <includeSnapshots>false</includeSnapshots>
+                            <minMuleVersion>4.4.0</minMuleVersion>
+                            <includeSnapshots>true</includeSnapshots>
                             <latestPatches>true</latestPatches>
                         </discoverRuntimes>
                     </runtimeConfiguration>
